k8s/kubeadm/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ngx-ink
spec:
  controller: nginx.org/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngx-ing
  labels:
    name: ngx-ing
spec:
  rules:
  - host: ngx.test
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: ngx-svc
            port: 
              number: 80
